[project]
name = "2024-rbm-policies"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jorge FdCD", email = "jfdecd@icloud.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/_2024_rbm_policies"]